# bouwnce_backend

./: .env.sample  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  bouwnce_cbt.sql  db_backup.dump  ecosystem.config.js  main.py  pyproject.toml  requirements.txt  test.py  waitlist_backup.sql
.github/workflow/: ci.yml
.github/workflows/: cd.yml  ci-cd.yml  ci.yml
.trunk/: trunk.yaml
Alembic/: env.py
Alembic/versions/: 0075b01f8e86_optimization_of_suborder_db.py  0309b4f8e988_add_notification_table.py  05b74a9fcc37_create_user_geolocation_model.py  06a6b87f1747_remove_unique_constraint_on_device_id_.py  08893a1effb9_create_matching_matching_request_.py  09b07077a188_add_products_column_to_order_and_.py  0f85675c415d_make_the_opt_time_datetime_timezone_.py  179ac2fbd663_changed_user_id_column_to_store_id_in_.py  17f719dee663_store_update.py  1a3fbb4c3478_.py  1d3c7a8b9e20_merge_caption_into_body_drop_caption.py  21f8566207fc_convert_all_models_to_use_sqlalchemy_v2_.py  24ce8a945ef5_create_newsletter_table.py  24eddf7b8fa2_create_newsletter_table.py  27a777c35db5_model_fix.py  284346085d2a_.py  2c0f3a9c2d1b_add_chat_conversations_and_messages.py  2cb35a760ae0_.py  2f88185dfd6c_.py  33c6191c1950_fields_update_to_suborder_and_user.py  395dee72556e_rename_user_name_to_username_in_user_.py  3dade7055414_checking_for_issues.py  40a0adab966d_created_cart_schema.py  45affa483b69_merge_heads_after_order_worker_migration.py  46c75220fe7e_first_commit.py  49ab2ce90040_.py  4c50c7ddc13b_create_newsletter_table.py  4ce3cfcf2a9c_fixed_id_cycle_issue.py  4d70fb1ea2c6_add_interest_and_user_interest_models.py  51428e91da4f_phone_mnuber_issue.py  515f208cdc76_allembic.py  524af710349a_create_a_refresh_token_model.py  52ce096d0c9d_change_order_total_amount_and_shippment_.py  567c4d0df1fb_fixed_postgresql_asyncpgenum_type_.py  57a8925dbc7e_added_a_status_column_to_suborders.py  57d5a9be68dc_.py  5a8ae401c1a3_merging_heads.py  5a9d1a2c3c11_add_media_urls_to_messages.py  5b2acbb6a20d_merge_heads.py  60f604fd10bd_add_profile_banner_to_user_model.py  (+67 more)
app/api/: dependencies.py
app/api/v1/: __init__.py  admin_bouwnce.py  auth_router.py  buisiness_info_crud.py  cart_router.py  contact_info_crud.py  jobs.py  mobile_events.py  newsletter.py  notifications.py  order_router.py  (+11 more)
app/core/: config.py  logger.py  rate_limiter.py  security.py
app/cron_jobs/: __init__.py  store_job.py
app/db/: mongo.py  postgres.py  postgres_db_conn.py  redis.py
app/domain/: order.py
app/email_templates/: compile.py
app/jobs/: prevent_render_shutdown.py  product_reservation.py
app/models/: __init__.py  base_document.py  basemodel.py  buisiness_info.py  cart.py  chat.py  contact_info.py  device_token.py  inventory.py  newsletter.py  order.py  order_item.py  payment.py  payout.py  payout_info.py  products.py  refresh_token.py  shipment_info.py  store.py  store_info.py  store_metrics.py  suborder.py  user.py  verification.py  waitlist.py  wallet.py  wallet_transaction.py
app/schemas/: __init__.py  business_info_crud.py  cart.py  contact_info_crud.py  events.py  newsletter.py  order.py  payout_info_crud.py  product.py  shipments_info_crud.py  store_crud.py  store_info_crud.py  user.py  vendor_dashboard.py  verification.py  waitlist.py
app/service/: __init__.py  auth_service.py  buisiness_info_crud.py  cart_service.py  contact_info_crud.py  metrics_service.py  mobile_events_service.py  newsletter.py  order_srevice.py  payout_info_crud.py  product_service.py  q_stash.py  shipment_info_crud.py  store_crud.py  store_info_crud.py  upload_service.py  user_service.py  vendor_dashboard.py  vendor_service.py  verification_service.py  waitlist.py
app/utils/: cloudinary_utils.py  emails.py  exception.py  helper.py  money.py  nin_verification.py  responses.py  upload_utils.py
app/worker/: celery_app.py  event_system.py
migrations/postgres/: Alembic
scripts/: check_bouwnce_user.py  measure_chat_latency.py  measure_chat_socket_latency.py  real_chat_ws_e2e.py  simulate_two_way_chat_ws.py
seed/: interest_seeding.py
tests/: test_smoke.py
(+56 files in other folders)
