[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bouwnce-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16.5",
  "emails>=0.6",
  "chardet<6",
  "asyncpg>=0.30.0",
  "fastapi[standard]>=0.116.1",
  "jinja2>=3.1.6",
  "passlib>=1.7.4",
  "psycopg2-binary>=2.9.10",
  "pydantic-settings>=2.10.1",
  "pyjwt>=2.10.1",
  "pymongo>=4.15.0",
  "python-decouple>=3.8",
  "redis>=6.4.0",
  "sqlalchemy>=2.0.43",
  "fastapi-mail>=1.5.0",
  "beanie[odm]>=2.0.0",
  "motor>=3.7.1",
  "cloudinary>=1.44.1",
  "python-multipart>=0.0.20",
  "paystackapi>=2.1.3",
  "resend>=2.17.0",
  "apscheduler[asyncio]>=3.11.1",
  "paystack>=1.5.0",
  "celery>=5.5.3",
]


[dependency-groups]
dev = [
  "black>=25.1.0",
  "mongoengine>=0.29.1",
  "mongoengine-migrate>=0.0.3",
  "pre-commit>=4.3.0",
  "ruff>=0.13.0",
]


# RUFF configuration

[tool.ruff]

target-version = "py312"

line-length = 88

exclude = [
  "migrations",
  ".git",
  "Alembic",
  "__pycache__",
  ".env",
  "alembic.ini",
  "README.md",
  ".env.sample",
  "uv.lock",
]

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]

ignore = ["E501", "E203"]


[tool.black]
line-length = 88
target-version = ["py312"]
exclude = '''
(
  /(
      \.git
    | \.venv
    | venv
    | env
    | alembic
    | Alembic
    | migrations
    | alembic\.ini
    | \.env
    | README\.md
    | \.env\.sample
    | uv\.lock
  )/
)
'''
